tests/fail/expr/tuple.stderr
error[E0308]: mismatched types
 --> tests/fail/expr/tuple.rs:2:25
  |
2 |     one_assert::assert!((true,));
  |                         ^^^^^^^ expected `bool`, found `(bool,)`
  |
  = note: expected type `bool`
            found tuple `(bool,)`

error[E0308]: mismatched types
 --> tests/fail/expr/tuple.rs:3:25
  |
3 |     one_assert::assert!((1, 2));
  |                         ^^^^^^ expected `bool`, found `({integer}, {integer})`
  |
  = note: expected type `bool`
            found tuple `({integer}, {integer})`
